<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/sample" />

        <TextView
            android:id="@+id/textview_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_directions_car_black_24dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/car_name" />

        <TextView
            android:id="@+id/textview_car_factory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_build_black_24dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/factory" />

        <TextView
            android:id="@+id/textview_car_kilometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_ev_station_black_24dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/kilometer" />

        <TextView
            android:id="@+id/textview_car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/price" />

        <Button
            android:id="@+id/button_car_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/background_button_red_color"
            android:text="@string/delete"
            android:textColor="#FFF" />
    </LinearLayout>
</android.support.v7.widget.CardView>